fixed some padding issues and alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   color: white;
   padding: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   font-weight: bold;
 }
 body {
@@ -32,7 +32,15 @@ h1 {
 .p {
   text-align: justify;
 }
-.chapter1 {
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+.chapter {
   display: flex;
   flex-direction: column;
   border: 2px solid black;
@@ -40,4 +48,6 @@ h1 {
   width: 800px;
   text-align: center;
   justify-content: center;
+  padding: 30px;
+  margin: 15px;
 }
